<resources>
    <string name="app_name">SCalculator</string>

    //fragment titles
    <string name="title_calculator">Sticker overpayment</string>
    <string name="title_steamC">Steam profit calculator</string>
    <string name="title_percentC">Percent calculator</string>
    <string name="title_currencyEx">Currency convertor</string>

    //hints
    <string name="hint_commission_percent">Default commission: 13%</string>
    <string name="hint_result">Input data to get result</string>
    <string name="hint_sticker_worths">Sticker worths</string>
    <string name="hint_input_value">Input your value here</string>
    <string name="hint_result_currency">Here will be result…</string>
    <string name="hint_price">Price</string>
    <string name="hint_100_percent">100%</string>
    <string name="hint_percent">%</string>

    // tv/et titles
    <string name="title_commission">Commission</string>
    <string name="title_buy_price">Buy price</string>
    <string name="title_sell_price">Sell price</string>
    <string name="title_result">Result</string>
    <string name="title_from">From</string>
    <string name="title_to">To</string>
    <string name="title_value">Value</string>
    <string name="title_pos_1">Pos-1</string>
    <string name="title_pos_2">Pos-2</string>
    <string name="title_pos_3">Pos-3</string>
    <string name="title_pos_4">Pos-4</string>

    // button titles
    <string name="btn_count_text">Count</string>
    <string name="btn_convert">Convert</string>

    // error messages
    <string name="error_enter_data">Enter your data!</string>
    <string name="error_internet_connection">You might not have internet connection</string>

    // messages
    <string name="result_profit">Clean profit:</string>
    <string name="result_profit_percent">Profit(%):</string>
    <string name="result_overpayment">Overpayment for sticker:</string>
    <string name="updated_date">Updated date:</string>
    <string name="rate">Rate:</string>
    <string name="result">Result:</string>


    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>UAH</item>
        <item>CNY</item>
    </string-array>

    <string-array name="weapons">
        <item>AK-47</item>
        <item>AWP</item>
        <item>M4A1-S</item>
        <item>M4A4</item>
        <item>Desert Eagle</item>
        <item>USP-S</item>
        <item>p250</item>
        <item>Glock-18</item>
    </string-array>


</resources>