<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_chocolate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.steamC.SteamFragment">

    <EditText
        android:id="@+id/editSellPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/form_stroke"
        android:minHeight="50sp"
        android:maxLines="1"
        android:paddingVertical="5sp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="@color/spanish_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSellPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_sell_price"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editSellPrice"
        app:layout_constraintTop_toTopOf="@id/editSellPrice" />


    <EditText
        android:id="@+id/editBuyPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/form_stroke"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSellPrice" />

    <TextView
        android:id="@+id/tvBuyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_buy_price"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editBuyPrice"
        app:layout_constraintTop_toTopOf="@id/editBuyPrice" />


    <EditText
        android:id="@+id/editCommission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/form_stroke"
        android:hint="@string/hint_commission_percent"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editBuyPrice" />

    <TextView
        android:id="@+id/tvCommission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_commission"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editCommission"
        app:layout_constraintTop_toTopOf="@id/editCommission" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/form_stroke"
        android:minHeight="50sp"
        android:paddingVertical="7sp"
        android:text="@string/hint_result"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editCommission" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_result"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvResult"
        app:layout_constraintTop_toTopOf="@id/tvResult" />

</androidx.constraintlayout.widget.ConstraintLayout>