<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_chocolate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.currencyEx.CurrencyFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llFrom"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/form_stroke"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/chooseCurrencyFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/spanish_orange" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFromTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_from"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/llFrom"
        app:layout_constraintTop_toTopOf="@id/llFrom" />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/form_stroke"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hint_input_value"
        android:inputType="numberDecimal|number"
        android:maxLines="1"
        android:textAlignment="gravity"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/llFrom" />

    <TextView
        android:id="@+id/tvValueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_value"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/inputAmount"
        app:layout_constraintTop_toTopOf="@id/inputAmount" />

    <LinearLayout
        android:id="@+id/llFrom2"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/form_stroke"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/llFrom">

        <Spinner
            android:id="@+id/chooseCurrencyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/spanish_orange" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_to"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/llFrom2"
        app:layout_constraintTop_toTopOf="@id/llFrom2" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/form_stroke"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:hint="@string/hint_result_currency"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/btnGet" />

    <TextView
        android:id="@+id/tvRateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="-11sp"
        android:background="@drawable/form_edit_text_title"
        android:paddingHorizontal="5sp"
        android:text="@string/title_result"
        android:textColor="@color/spanish_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvResult"
        app:layout_constraintTop_toTopOf="@id/tvResult" />

    <ImageView
        android:id="@+id/arrowToRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:rotation="270"
        android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
        app:layout_constraintEnd_toStartOf="@+id/llFrom2"
        app:layout_constraintStart_toEndOf="@+id/llFrom"
        app:layout_constraintTop_toTopOf="@+id/llFrom"
        app:tint="@color/spanish_orange" />

    <TextView
        android:id="@+id/btnGet"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/form_stroke_button"
        android:elevation="10sp"
        android:paddingTop="5sp"
        android:text="@string/btn_convert"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inputAmount"
        app:layout_constraintStart_toStartOf="@+id/inputAmount"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>