<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_chocolate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.percentC.PercentFragment">


    <EditText
        android:id="@+id/editPrice1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:background="@drawable/form_stroke"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal|number"
        android:maxLines="1"
        android:minWidth="150sp"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <EditText
        android:id="@+id/editPrice2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:background="@drawable/form_stroke"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal|number"
        android:maxLines="1"
        android:minWidth="150sp"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2" />


    <TextView
        android:id="@+id/editPercent1_static"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:background="@drawable/form_stroke"
        android:minWidth="150sp"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:text="@string/hint_100_percent"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <EditText
        android:id="@+id/editPercent2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:background="@drawable/form_stroke"
        android:hint="@string/hint_percent"
        android:inputType="numberDecimal|number"
        android:maxLines="1"
        android:minWidth="150sp"
        android:minHeight="50sp"
        android:paddingVertical="5sp"
        android:textAlignment="center"
        android:textColor="@color/spanish_orange"
        android:textColorHint="@color/saddle_brown"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2" />


    <ImageView
        android:id="@+id/btnCount"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/form_stroke_button"
        android:src="@drawable/ic_baseline_drag_handle_24"
        app:tint="@color/spanish_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="25dp"
        android:background="@color/selective_yellow"
        app:layout_constraintEnd_toStartOf="@+id/btnCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCount" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:layout_marginTop="25sp"
        android:layout_marginHorizontal="20sp"
        android:background="@color/selective_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCount"
        app:layout_constraintTop_toTopOf="@+id/btnCount" />


</androidx.constraintlayout.widget.ConstraintLayout>