<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_chocolate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stickers.StickersFragment">


        <Spinner
            android:id="@+id/chooseWeaponType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/spanish_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnClear"
            android:visibility="gone"
            android:layout_width="50dp"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/form_stroke_round_button"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/spanish_orange" />


        <ImageView
            android:id="@+id/instructionForSticker"
            android:layout_width="0dp"
            android:layout_height="150sp"
            android:layout_marginHorizontal="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseWeaponType" />

        <EditText
            android:id="@+id/editPos1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="140dp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            android:hint="@string/hint_sticker_worths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionForSticker" />

        <EditText
            android:id="@+id/pos1OverpayPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/editPos1"
            app:layout_constraintTop_toBottomOf="@id/instructionForSticker" />

        <TextView
            android:id="@+id/tvPos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="-11sp"
            android:background="@drawable/form_edit_text_title"
            android:paddingHorizontal="5sp"
            android:text="@string/title_pos_1"
            android:textColor="@color/spanish_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/editPos1"
            app:layout_constraintTop_toTopOf="@id/editPos1" />

        <EditText
            android:id="@+id/editPos2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            android:hint="@string/hint_sticker_worths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPos1" />

        <EditText
            android:id="@+id/pos2OverpayPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editPos2"
            app:layout_constraintTop_toBottomOf="@id/editPos1" />

        <TextView
            android:id="@+id/tvPos2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="-11sp"
            android:background="@drawable/form_edit_text_title"
            android:paddingHorizontal="5sp"
            android:text="@string/title_pos_2"
            android:textColor="@color/spanish_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/editPos2"
            app:layout_constraintTop_toTopOf="@id/editPos2" />


        <EditText
            android:id="@+id/editPos3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            android:hint="@string/hint_sticker_worths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPos2" />

        <EditText
            android:id="@+id/pos3OverpayPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editPos3"
            app:layout_constraintTop_toBottomOf="@id/editPos2" />

        <TextView
            android:id="@+id/tvPos3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="-11sp"
            android:background="@drawable/form_edit_text_title"
            android:paddingHorizontal="5sp"
            android:text="@string/title_pos_3"
            android:textColor="@color/spanish_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/editPos3"
            app:layout_constraintTop_toTopOf="@id/editPos3" />


        <EditText
            android:id="@+id/editPos4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            android:hint="@string/hint_sticker_worths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPos3" />

        <EditText
            android:id="@+id/pos4OverpayPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:inputType="numberDecimal|number"
            android:maxLines="1"
            android:minHeight="50sp"
            android:paddingVertical="5sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/editPos4"
            app:layout_constraintTop_toBottomOf="@id/editPos3" />

        <TextView
            android:id="@+id/tvPos4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="-11sp"
            android:background="@drawable/form_edit_text_title"
            android:paddingHorizontal="5sp"
            android:text="@string/title_pos_4"
            android:textColor="@color/spanish_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/editPos4"
            app:layout_constraintTop_toTopOf="@id/editPos4" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/form_stroke"
            android:minHeight="50sp"
            android:paddingVertical="7sp"
            android:textAlignment="center"
            android:textColor="@color/spanish_orange"
            android:hint="@string/hint_result"
            android:textColorHint="@color/saddle_brown"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPos4" />

        <TextView
            android:id="@+id/tvResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="-11sp"
            android:background="@drawable/form_edit_text_title"
            android:paddingHorizontal="5sp"
            android:text="@string/title_result"
            android:textColor="@color/spanish_orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvResult"
            app:layout_constraintTop_toTopOf="@id/tvResult" />

</androidx.constraintlayout.widget.ConstraintLayout>